app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;
    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
    --primary: 207 68% 53%;
    --primary-foreground: 0 0% 100%;
    --secondary: 0 0% 98%;
    --secondary-foreground: 222.2 47.4% 11.2%;
    --muted: 0 0% 98%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --accent: 213 69% 70%;
    --accent-foreground: 222.2 47.4% 11.2%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 214.3 31.8% 91.4%;
    --border-light: 214.3 31.8% 91.4%;
    --border-medium: 214.3 31.8% 85.4%;
    --border-heavy: 214.3 31.8% 75.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 207 68% 53%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }
  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 0 0% 98%;
    --card: 222.2 84% 4.9%;
    --card-foreground: 0 0% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 207 68% 53%;
    --primary-foreground: 0 0% 100%;
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 0 0% 98%;
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
    --accent: 213 69% 70%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 217.2 32.6% 17.5%;
    --border-light: 217.2 32.6% 22.5%;
    --border-medium: 217.2 32.6% 17.5%;
    --border-heavy: 217.2 32.6% 12.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 207 68% 53%;
  }
}

@layer base {
  body {
    @apply bg-background text-foreground;
    font-weight: 500;
  }
}

@layer utilities {
  .scrollbar-hide {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
  .scrollbar-hide::-webkit-scrollbar {
    display: none;
  }

  .card-hover-effect {
    @apply transition-all duration-200;
  }

  .card-hover-effect:hover {
    @apply ring-2 ring-primary;
  }
}

